Esqueleto do capítulo macroeconomia imobiliária cecon

--- a/Articles/Macro_Imobiliaria_Cecon/Estrutura.org
+++ b/Articles/Macro_Imobiliaria_Cecon/Estrutura.org
@@ -1,81 +1,200 @@
 #+OPTIONS: num:t toc:nil
 #+TITLE:  Estrutura do capítulo
 #+LANG: pt_br
+#+LATEX_HEADER: \addbibresource{/HDD/Org/all_my_refs.bib}
 
 * Introdução
-** Problematização teórica
-*** Modelo keynesiano simples e a relevância do investimento das firmas autônomo
+** Problematização teórica: Modelo keynesiano simples e a relevância do investimento das firmas autônomo
 
-*** Instabilidade financeira minskiana e o olhar sobre a firma representativa
+fullcite:serranoAcumulacaoGastoImprodutivo2001
+
 
 ** Direcionamentos da fronteira
 
-*** Alguns temas foram reponderados no pós Grande Recessão
 
-* Lado Financeiro
 
-** Movimentos gerais
+fullcite:carvalho_personal_2016
 
-*** Contrastar financeirização com hipotecarização
+fullcite:brochier_macroeconomics_2017
 
-*** Tendência crescente do crédito ao setor privado
+fullcite:fiebigerSemiautonomousHouseholdExpenditures2018
 
-*** Apresentar fatos estilizados
+fullcite:lavoieWasHymanMinsky2020
 
-** Particularidades institucionais do mercado de crédito imobiliário
 
-*** Apresentar literatura que discute instituições
 
-*** Resumir debate de Variedades de capitalismos e pouca atenção no setor residencial
+* Motivação empírica e movimentos gerais
 
-** Crédito e bolhas
-*** Contexto: maior atenção às bolhas de ativos via medidas macroprudenciais
-*** Associar movimentos gerais com bolhas
+** Tendência crescente do crédito para as famílias
 
-**** Relação entre bolha e consumo
+fullcite:barba_rising_2009
 
-*** Relevância da bolha de imóveis
 
-*** Efeitos reais das bolhas de ativos
+fullcite:kim_aggregate_2012
 
-** Fragilidade financeira e heterogeneidade
+fullcite:cynamon_inequality_2013
 
-*** Discussão geral de fragilidade financeira (retomando temas da introdução)
+fullcite:kohl_2018_More
 
-*** Apresenta velha narrativa
+fullcite:mandarinoWorkersDebtfinancedConsumption2020
 
-*** Apresenta nova narrativa em termos gerais (para além dos EUA)
+fullcite:woodHousePricesPrivate2020
 
-*** Relevância da heterogeneidade para compreender a fragilidade financeira
+** Contrastar financeirização com hipotecarização
 
-* Lado Real
+fullcite:bibowFinancializationUSHousehold2010
 
-** Ciclo
+fullcite:lapavitsasFinancialisationVariedComparative2013
 
-*** Investimento residencial como um antecedente de recessões e recuperações (EUA)
+fullcite:vanguntenVarietiesIndebtednessFinancialization2018
 
-*** Relevância do investimento residencial para outros países (via vários efeitos)
+fullcite:mertzanisFinancialisationInstitutionsFinancing2019
 
-** Tendência
+fullcite:jorda_2016_great
 
-*** Discussão teórica dos gastos autônomos determinando a tendência
+** Apresentar fatos estilizados
 
-*** Evidência empírica dos gastos autônomos
+*** Hipotecarização
+
+
+*** Investimento residencial como um antecedente de recessões e recuperações (Ciclo)
+
+fullcite:greenFollowLeaderHow1997
+
+fullcite:leamerHousingBusinessCycle2007,leamerHousingReallyBusiness2015a
+
+fullcite:fiebigerSemiautonomousHouseholdExpenditures2018
+
+- Relevância do investimento residencial para outros países (via vários efeitos)
+
+
+*** Evidência empírica dos gastos autônomos (tendência)
 
 **** Em geral
 
+fullcite:girardiLongrunEffectiveDemand2016d
+
+fullcite:girardi_2020_Autonomous
+
+fullcite:perez-montiel_2020_Autonomous
+
 **** Investimento residencial em particular
 
+fullcite:fiebigerTrendBusinessCycles2017b
+
+fullcite:perez-montiel_2021_Housing
+
+** Retoma problematização teórica: existe pesquisa além do investimento autônomo das firmas
+
+* Particularidades institucionais do mercado de crédito imobiliário
+
+** Variedades de capitalismos: das firmas para as famílias
+
+fullcite:hall_2001_Varieties
+
+fullcite:setterfieldVarietiesCapitalismIncreasing2020a
+
+fullcite:woodHousePricesPrivate2020
+
+** Variedades de capitalismos e pouca atenção no setor residencial
+
+
+fullcite:schwartzVarietiesResidentialCapitalism2009
+
+fullcite:vanguntenVarietiesIndebtednessFinancialization2018
+
+fullcite:schwartzVarietiesResidentialCapitalism2009
+
+** Particularidades do mercado imobiliário
+
+fullcite:blackwellOriginsNationalHousing2018a
+
+fullcite:blackwellVarietiesHousingFinance2017
+
+fullcite:greenAmericanMortgageHistorical2005,green_2014_International
+
+fullcite:green_2010_Housinga
+
+
+** Problematizar complementariedade institucional
+
+fullcite:chang_2011_Institutions
+
+
+* Bolhas e demanda agregada
+** Contexto: maior atenção às bolhas de ativos via medidas macroprudenciais e juros
+
+Sugestão de tema para contextualizar a discussão.
+
+fullcite:jorda_2015_Betting
+
+** Relação entre bolha e consumo
+
+
+
+fullcite:ryooHouseholdDebtHousing2015a
+
+fullcite:dawidBubblesCrashesFinancial2015
+
+** Relevância da bolha de imóveis
+
+fullcite:jorda_2015_Leveraged
+
+** Efeitos da bolha de ativos sobre a demanda agregada
+
+fullcite:da_silva_teixeira_crescimento_2015
+
 ** Determinantes do investimento residencial
+*** Consenso da literatura
+
+- Pensei em construir o argumento como fizemos no artigo do VEC
 
 *** Discussão da taxa própria
 
-* Tópicos da agenda de pesquisa
+fullcite:da_silva_teixeira_crescimento_2015
 
-** Determinantes do investimento residencial para além dos EUA
+fullcite:teixeira__Longrun
 
-** Particularidades institucionais do mercado de crédito imobiliário e sua conexão com bolhas de ativos
+*** Determinantes do investimento residencial para além dos EUA
+
+
+
+
+
+
+* Fragilidade financeira e narrativas da crise imobiliária
+
+** Instabilidade financeira minskiana agregada
+
+fullcite:minskyStabilizingUnstableEconomy1986,minskyauth.JohnMaynardKeynes1975
+
+fullcite:nikolaidiMinskyModelsStructured2017b
+
+fullcite:heinFinanceDominatedCapitalismReDistribution2012
+
+
+fullcite:lavoie_2001_Minsky
+
+fullcite:lavoieWasHymanMinsky2020
+
+
+** Apresenta velha narrativa
+
+fullcite:mianConsequencesMortgageCredit2009a
+
+fullcite:mianSavingGlutRich2020a
+
+** Apresenta nova narrativa em termos gerais (para além dos EUA)
+
+fullcite:albanesi_2017_Credit
 
 ** Heterogeneidade das famílias e fragilidade financeira na presença de inflação de ativos e racionamento de crédito
+
+fullcite:godley_seven_1999
+
+fullcite:nikiforosStockFlowConsistentMacroeconomic2017a
+
+fullcite:carvalhoIncomeInequalityMacroeconomic2014
+
 
 * Conclusão
