--- a/Articles/Macro_Imobiliaria_Cecon/Estrutura.tex
+++ b/Articles/Macro_Imobiliaria_Cecon/Estrutura.tex
@@ -1,4 +1,4 @@
-% Created 2021-04-06 ter 16:52
+% Created 2021-04-07 qua 14:52
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -29,6 +29,7 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \usepackage{attachfile}
 \usepackage{setspace}
 \usepackage{tikz}
+\addbibresource{/HDD/Org/all_my_refs.bib}
 \author{Gabriel Petrini}
 \date{\today}
 \title{Estrutura do capítulo}
@@ -37,125 +38,237 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \maketitle
 
 \section{Introdução}
-\label{sec:org0b0dd75}
-\subsection{Problematização teórica}
-\label{sec:orgff9fbd5}
-\subsubsection{Modelo keynesiano simples e a relevância do investimento das firmas autônomo}
-\label{sec:org3575b5b}
+\label{sec:orga50d742}
+\subsection{Problematização teórica: Modelo keynesiano simples e a relevância do investimento das firmas autônomo}
+\label{sec:orgd61b7a9}
 
-\subsubsection{Instabilidade financeira minskiana e o olhar sobre a firma representativa}
-\label{sec:org219e270}
+\fullcite{serranoAcumulacaoGastoImprodutivo2001}
+
 
 \subsection{Direcionamentos da fronteira}
-\label{sec:orgba3daaa}
+\label{sec:org71d83af}
 
-\subsubsection{Alguns temas foram reponderados no pós Grande Recessão}
-\label{sec:orgd06fcfb}
 
-\section{Lado Financeiro}
-\label{sec:org59f33c7}
 
-\subsection{Movimentos gerais}
-\label{sec:org9ef048e}
+\fullcite{carvalho_personal_2016}
 
-\subsubsection{Contrastar financeirização com hipotecarização}
-\label{sec:orga95a1c3}
+\fullcite{brochier_macroeconomics_2017}
 
-\subsubsection{Tendência crescente do crédito ao setor privado}
-\label{sec:org3c84195}
+\fullcite{fiebigerSemiautonomousHouseholdExpenditures2018}
 
-\subsubsection{Apresentar fatos estilizados}
-\label{sec:orgfe8fa07}
+\fullcite{lavoieWasHymanMinsky2020}
 
-\subsection{Particularidades institucionais do mercado de crédito imobiliário}
-\label{sec:org193cce0}
 
-\subsubsection{Apresentar literatura que discute instituições}
-\label{sec:org7efe679}
 
-\subsubsection{Resumir debate de Variedades de capitalismos e pouca atenção no setor residencial}
-\label{sec:org9642304}
+\section{Motivação empírica e movimentos gerais}
+\label{sec:orgc0ecdab}
 
-\subsection{Crédito e bolhas}
-\label{sec:orge92daa3}
-\subsubsection{Contexto: maior atenção às bolhas de ativos via medidas macroprudenciais}
-\label{sec:orgc0364e9}
-\subsubsection{Associar movimentos gerais com bolhas}
-\label{sec:orgebcb26b}
+\subsection{Tendência crescente do crédito para as famílias}
+\label{sec:orgea69fc1}
 
-\begin{enumerate}
-\item Relação entre bolha e consumo
-\label{sec:orge545492}
-\end{enumerate}
+\fullcite{barba_rising_2009}
 
-\subsubsection{Relevância da bolha de imóveis}
-\label{sec:orgc187d7a}
 
-\subsubsection{Efeitos reais das bolhas de ativos}
-\label{sec:org4872d66}
+\fullcite{kim_aggregate_2012}
 
-\subsection{Fragilidade financeira e heterogeneidade}
-\label{sec:org0f489ac}
+\fullcite{cynamon_inequality_2013}
 
-\subsubsection{Discussão geral de fragilidade financeira (retomando temas da introdução)}
-\label{sec:orgce797bf}
+\fullcite{kohl_2018_More}
 
-\subsubsection{Apresenta velha narrativa}
-\label{sec:org075b2c0}
+\fullcite{mandarinoWorkersDebtfinancedConsumption2020}
 
-\subsubsection{Apresenta nova narrativa em termos gerais (para além dos EUA)}
-\label{sec:org4f50752}
+\fullcite{woodHousePricesPrivate2020}
 
-\subsubsection{Relevância da heterogeneidade para compreender a fragilidade financeira}
-\label{sec:orgca41c68}
+\subsection{Contrastar financeirização com hipotecarização}
+\label{sec:orgaaa152c}
 
-\section{Lado Real}
-\label{sec:org1827220}
+\fullcite{bibowFinancializationUSHousehold2010}
 
-\subsection{Ciclo}
-\label{sec:orgd6bad89}
+\fullcite{lapavitsasFinancialisationVariedComparative2013}
 
-\subsubsection{Investimento residencial como um antecedente de recessões e recuperações (EUA)}
-\label{sec:orgfa45007}
+\fullcite{vanguntenVarietiesIndebtednessFinancialization2018}
 
-\subsubsection{Relevância do investimento residencial para outros países (via vários efeitos)}
-\label{sec:org8149907}
+\fullcite{mertzanisFinancialisationInstitutionsFinancing2019}
 
-\subsection{Tendência}
-\label{sec:orgfc218cd}
+\fullcite{jorda_2016_great}
 
-\subsubsection{Discussão teórica dos gastos autônomos determinando a tendência}
-\label{sec:orgfb0f52b}
+\subsection{Apresentar fatos estilizados}
+\label{sec:orgc378089}
 
-\subsubsection{Evidência empírica dos gastos autônomos}
-\label{sec:orgbc8476f}
+\subsubsection{Hipotecarização}
+\label{sec:org8dc11f2}
+
+
+\subsubsection{Investimento residencial como um antecedente de recessões e recuperações (Ciclo)}
+\label{sec:orgd73a0d0}
+
+\fullcite{greenFollowLeaderHow1997}
+
+\fullcite{leamerHousingBusinessCycle2007,leamerHousingReallyBusiness2015a}
+
+\fullcite{fiebigerSemiautonomousHouseholdExpenditures2018}
+
+\begin{itemize}
+\item Relevância do investimento residencial para outros países (via vários efeitos)
+\end{itemize}
+
+
+\subsubsection{Evidência empírica dos gastos autônomos (tendência)}
+\label{sec:orgf1f218e}
 
 \begin{enumerate}
 \item Em geral
-\label{sec:org4943eaa}
+\label{sec:orgda028ae}
+
+\fullcite{girardiLongrunEffectiveDemand2016d}
+
+\fullcite{girardi_2020_Autonomous}
+
+\fullcite{perez-montiel_2020_Autonomous}
 
 \item Investimento residencial em particular
-\label{sec:orgf560caa}
+\label{sec:org07a73c0}
+
+\fullcite{fiebigerTrendBusinessCycles2017b}
+
+\fullcite{perez-montiel_2021_Housing}
 \end{enumerate}
 
+\subsection{Retoma problematização teórica: existe pesquisa além do investimento autônomo das firmas}
+\label{sec:orga03bfd6}
+
+\section{Particularidades institucionais do mercado de crédito imobiliário}
+\label{sec:orgfb78cbf}
+
+\subsection{Variedades de capitalismos: das firmas para as famílias}
+\label{sec:org45ece34}
+
+\fullcite{hall_2001_Varieties}
+
+\fullcite{setterfieldVarietiesCapitalismIncreasing2020a}
+
+\fullcite{woodHousePricesPrivate2020}
+
+\subsection{Variedades de capitalismos e pouca atenção no setor residencial}
+\label{sec:org30213e7}
+
+
+\fullcite{schwartzVarietiesResidentialCapitalism2009}
+
+\fullcite{vanguntenVarietiesIndebtednessFinancialization2018}
+
+\fullcite{schwartzVarietiesResidentialCapitalism2009}
+
+\subsection{Particularidades do mercado imobiliário}
+\label{sec:orgc93ff1d}
+
+\fullcite{blackwellOriginsNationalHousing2018a}
+
+\fullcite{blackwellVarietiesHousingFinance2017}
+
+\fullcite{greenAmericanMortgageHistorical2005,green_2014_International}
+
+\fullcite{green_2010_Housinga}
+
+
+\subsection{Problematizar complementariedade institucional}
+\label{sec:orgc83729a}
+
+\fullcite{chang_2011_Institutions}
+
+
+\section{Bolhas e demanda agregada}
+\label{sec:org800b6e5}
+\subsection{Contexto: maior atenção às bolhas de ativos via medidas macroprudenciais e juros}
+\label{sec:orgba1e319}
+
+Sugestão de tema para contextualizar a discussão.
+
+\fullcite{jorda_2015_Betting}
+
+\subsection{Relação entre bolha e consumo}
+\label{sec:orgd5978ba}
+
+
+
+\fullcite{ryooHouseholdDebtHousing2015a}
+
+\fullcite{dawidBubblesCrashesFinancial2015}
+
+\subsection{Relevância da bolha de imóveis}
+\label{sec:org9d0661f}
+
+\fullcite{jorda_2015_Leveraged}
+
+\subsection{Efeitos da bolha de ativos sobre a demanda agregada}
+\label{sec:org63d48ef}
+
+\fullcite{da_silva_teixeira_crescimento_2015}
+
 \subsection{Determinantes do investimento residencial}
-\label{sec:org844515a}
+\label{sec:org7611fda}
+\subsubsection{Consenso da literatura}
+\label{sec:orgcb7e772}
+
+\begin{itemize}
+\item Pensei em construir o argumento como fizemos no artigo do VEC
+\end{itemize}
 
 \subsubsection{Discussão da taxa própria}
-\label{sec:org896c223}
+\label{sec:orga5a2a17}
 
-\section{Tópicos da agenda de pesquisa}
-\label{sec:orgdf41c4b}
+\fullcite{da_silva_teixeira_crescimento_2015}
 
-\subsection{Determinantes do investimento residencial para além dos EUA}
-\label{sec:org3141fbb}
+\fullcite{teixeira__Longrun}
 
-\subsection{Particularidades institucionais do mercado de crédito imobiliário e sua conexão com bolhas de ativos}
-\label{sec:org28971f4}
+\subsubsection{Determinantes do investimento residencial para além dos EUA}
+\label{sec:org4b1b6af}
+
+
+
+
+
+
+\section{Fragilidade financeira e narrativas da crise imobiliária}
+\label{sec:org098bdf8}
+
+\subsection{Instabilidade financeira minskiana agregada}
+\label{sec:org2165d40}
+
+\fullcite{minskyStabilizingUnstableEconomy1986,minskyauth.JohnMaynardKeynes1975}
+
+\fullcite{nikolaidiMinskyModelsStructured2017b}
+
+\fullcite{heinFinanceDominatedCapitalismReDistribution2012}
+
+
+\fullcite{lavoie_2001_Minsky}
+
+\fullcite{lavoieWasHymanMinsky2020}
+
+
+\subsection{Apresenta velha narrativa}
+\label{sec:org33e2c42}
+
+\fullcite{mianConsequencesMortgageCredit2009a}
+
+\fullcite{mianSavingGlutRich2020a}
+
+\subsection{Apresenta nova narrativa em termos gerais (para além dos EUA)}
+\label{sec:org4bc75d2}
+
+\fullcite{albanesi_2017_Credit}
 
 \subsection{Heterogeneidade das famílias e fragilidade financeira na presença de inflação de ativos e racionamento de crédito}
-\label{sec:org81c310f}
+\label{sec:org68d10e7}
+
+\fullcite{godley_seven_1999}
+
+\fullcite{nikiforosStockFlowConsistentMacroeconomic2017a}
+
+\fullcite{carvalhoIncomeInequalityMacroeconomic2014}
+
 
 \section{Conclusão}
-\label{sec:org948e627}
+\label{sec:org6340b89}
 \end{document}
