Estrutura do capítulo rediscutida.

--- a/Articles/Macro_Imobiliaria_Cecon/Estrutura.org
+++ b/Articles/Macro_Imobiliaria_Cecon/Estrutura.org
@@ -9,6 +9,7 @@
 fullcite:serranoAcumulacaoGastoImprodutivo2001
 
 
+** Crise e o Super (papel dos gastos autônomos em geral)
 ** Direcionamentos da fronteira
 
 
@@ -24,37 +25,7 @@ fullcite:lavoieWasHymanMinsky2020
 
 
 * Motivação empírica e movimentos gerais
-
-** Tendência crescente do crédito para as famílias
-
-fullcite:barba_rising_2009
-
-
-fullcite:kim_aggregate_2012
-
-fullcite:cynamon_inequality_2013
-
-fullcite:kohl_2018_More
-
-fullcite:mandarinoWorkersDebtfinancedConsumption2020
-
-fullcite:woodHousePricesPrivate2020
-
-** Contrastar financeirização com hipotecarização
-
-fullcite:bibowFinancializationUSHousehold2010
-
-fullcite:lapavitsasFinancialisationVariedComparative2013
-
-fullcite:vanguntenVarietiesIndebtednessFinancialization2018
-
-fullcite:mertzanisFinancialisationInstitutionsFinancing2019
-
-fullcite:jorda_2016_great
-
-** Apresentar fatos estilizados
-
-*** Hipotecarização
+** Ciclo, tendência e super
 
 
 *** Investimento residencial como um antecedente de recessões e recuperações (Ciclo)
@@ -84,7 +55,36 @@ fullcite:fiebigerTrendBusinessCycles2017b
 
 fullcite:perez-montiel_2021_Housing
 
-** Retoma problematização teórica: existe pesquisa além do investimento autônomo das firmas
+
+** Tendência crescente do crédito para as famílias
+
+
+
+fullcite:kim_aggregate_2012
+
+fullcite:cynamon_inequality_2013
+
+fullcite:kohl_2018_More
+
+fullcite:mandarinoWorkersDebtfinancedConsumption2020
+
+fullcite:woodHousePricesPrivate2020
+
+** Contrastar financeirização com hipotecarização
+
+- Financeirização em termos gerais $\Rightarrow$ Papel predominante do crédito imobiliário
+
+fullcite:bibowFinancializationUSHousehold2010
+
+fullcite:lapavitsasFinancialisationVariedComparative2013
+
+fullcite:vanguntenVarietiesIndebtednessFinancialization2018
+
+fullcite:mertzanisFinancialisationInstitutionsFinancing2019
+
+fullcite:jorda_2016_great
+
+** Fatos estilizados da hipotecarização
 
 * Particularidades institucionais do mercado de crédito imobiliário
 
@@ -116,33 +116,30 @@ fullcite:greenAmericanMortgageHistorical2005,green_2014_International
 fullcite:green_2010_Housinga
 
 
-** Problematizar complementariedade institucional
+** Problematizar complementariedade institucional :noexport:
 
 fullcite:chang_2011_Institutions
 
 
-* Bolhas e demanda agregada
-** Contexto: maior atenção às bolhas de ativos via medidas macroprudenciais e juros
+* Crédito, demanda agregada e inflação de ativos
+** Hipotecarização -> Relevância dos imóveis (Amarrar com seção anterior)
 
-Sugestão de tema para contextualizar a discussão.
+fullcite:karwowskiDimensionsDeterminantsFinancialisation2019
 
-fullcite:jorda_2015_Betting
+** Imóveis, Crédito e demanda agregada
 
-** Relação entre bolha e consumo
+fullcite:barba_rising_2009
+
+*** Consumo
+
+*** Investimento residencial
 
 
+fullcite:jorda_2015_Leveraged
 
 fullcite:ryooHouseholdDebtHousing2015a
 
 fullcite:dawidBubblesCrashesFinancial2015
-
-** Relevância da bolha de imóveis
-
-fullcite:jorda_2015_Leveraged
-
-** Efeitos da bolha de ativos sobre a demanda agregada
-
-fullcite:da_silva_teixeira_crescimento_2015
 
 ** Determinantes do investimento residencial
 *** Consenso da literatura
@@ -155,11 +152,12 @@ fullcite:da_silva_teixeira_crescimento_2015
 
 fullcite:teixeira__Longrun
 
-*** Determinantes do investimento residencial para além dos EUA
+** Determinantes do investimento residencial para além dos EUA
 
 
+** Fragilidade financeira e crise
 
-
+** Retomar relevância do investimento residencial macro
 
 
 * Fragilidade financeira e narrativas da crise imobiliária
