Parecer Economia e Sociedade. Base Felipe. Resquícios PED CE324

--- a/Reunioes.org
+++ b/Reunioes.org
@@ -112,7 +112,8 @@ Como é o caso de que $\pi = 1$.
 
 * Tese
 
-** 2020-07-04: Discussão projeto fapesp
+** DONE 2020-07-04: Discussão projeto fapesp
+CLOSED: [2021-05-03 seg 15:04]
    - Motivação não é uma questão pessoal
      - Diz respeito a como ela se encaixa na literatura e como contribui
 *** Ensaio 3
@@ -126,6 +127,24 @@ Como é o caso de que $\pi = 1$.
     - Países com instituições distintas tem um mesmo fenômeno
 *** Ensaio 2
     Falar que vai analisar a inflação de ativos e não a taxa própria no vec
+
+** <2021-05-03 seg> Próximos passos pós capítulo do Cecon
+
+*** Ordem dos capítulos
+
+*** Pendências dos artigos
+
+*** Monografia Lorena
+
+**** TODO Mandar csv
+
+**** TODO Pedir para Lorena enviar os dados de 1% de todos os países amostra (mais desagregado)
+
+**** Separar por cluster regional entre os violentos e agregar não violentos
+
+***** Violentos se tornam dummy, distância se torna menos relevante
+
+**** Adicionar mais variáveis
 
 * Artigos
 
@@ -158,6 +177,20 @@ Como é o caso de que $\pi = 1$.
 **** Reduzir notas de rodapé
 **** Remover figura 5
 
+*** <2021-05-03 seg>
+
+- Posicionar enquanto determinantes financeiros dos gastos autônomos
+- Explicar melhor taxa própria
+- Suavizar conclusão
+- Falar de bolha
+- Motivo aluguel no termo constante já que muda mais lentamente
+- Mudanças na regulação para gerar booms e manias
+- Taxa própria é relevante para todo mundo e não só para o especulador
+  + Redução da dívida líquida com a valorização do imóvel
+  + Segunda hipoteca
+- Referência do porquê bolha é nacional
+- Reler artigo
+
 ** MKKS
 
 *** <2021-04-05 seg> Primeira reunião
@@ -180,9 +213,15 @@ Como é o caso de que $\pi = 1$.
 - Adicionar flag para retornar ao modelo base
 - Criar Branch
 
+
+** Rating
+
+- Olhar código e ver dados faltantes
+
 * Capítulos de livros
 
-** Macroeconomia imobiliária
+** DONE Macroeconomia imobiliária
+CLOSED: [2021-05-03 seg 15:04]
 
 *** Estrutura <2021-04-06 ter>
 
